syntax = "proto3";
package com.tim.common.protos;

option java_outer_classname = "Notify";

//通知消息
message NotifyMessage {
    string id = 1; //消息唯一标示
    string type = 2; // 通知类型
    string uid = 3; // 接收方uid
    string group_id = 4; // 接收方id
    string content = 5; // 通知内容
    uint64 timestamp = 6; //消息时间
}


